--- a/css/header.css
+++ b/css/header.css
@@ -26,3 +26,9 @@
     text-transform: uppercase;
    
 }
+
+@media screen and (max-width:750px) {
+    .header h1{
+        font-size: 20px;
+    }
+}
