--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,10 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/header.css') }}"/>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/form.css') }}"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/header.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/form.css') }}">
     <title>Simulação Aposentadoria</title>
 </head>
 <body>
@@ -16,44 +12,36 @@
         <img src="https://images.emojiterra.com/google/noto-emoji/unicode-15.1/color/1024px/1f1e7-1f1f7.png" alt="">
         <h1>Simula Aposentadoria</h1>
     </header>
-
     <main>
-
         <section class="main__form">
-             
-            <form class="form">
-                <p class="title">Cadastro </p>
-                <p class="message">Informe seus dados </p>
-                    
+            <form class="form" action="/enviar" method="post">
                 <label>
-                    <input class="input" id="name" type="text" placeholder="" required="">
+                    <input class="input" id="name" name="name" type="text" placeholder="" required="">
                     <span>Nome completo</span>
-                </label> 
+                </label>
                 <label>
-                    <input class="input" id="dataNascimento" type="data" placeholder="" required="">
+                    <input class="input" id="dataNascimento" name="dataNascimento" type="date" placeholder="" required="">
                     <span>Data de nascimento</span>
                 </label>
-                    
                 <label>
-                    <input class="input" id="cpf" type="text" placeholder="" required="">
+                    <input class="input" id="cpf" name="cpf" type="text" placeholder="" required="">
                     <span>CPF</span>
                 </label>
-              
                 <label>
-                    <input class="input" id="salario" type="number" placeholder="" required="">
+                    <input class="input" id="salario" name="salario" type="number" placeholder="" required="">
                     <span>Salário</span>
                 </label>
                 <label>
-                    <input class="input" id="dataContratacao" type="data" placeholder="" required="">
-                    <span>Tempo de contribuição</span>
+                    <input class="input" id="dataContratacao" name="dataContratacao" type="date" placeholder="" required="">
+                    <span>Data de Contratação</span>
                 </label>
-            
+                <label>
+                    <input class="input" id="tempoContribuicao" name="tempoContribuicao" type="number" placeholder="" required="">
+                    <span>Tempo de contribuição (anos)</span>
+                </label>
                 <button class="submit">Enviar</button>
-                
             </form>
         </section>
-
     </main>
-    
 </body>
 </html>
