--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/header.css') }}"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/form.css') }}"/>
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+
     <title>Simulação Aposentadoria</title>
     <style>
         /* Estilos para o modal */
